Reconstrucción v1 (models,response/request,mappers)